Fix layout issues

--- a/wp-content/themes/markomilo/src/scss/base/_base.scss
+++ b/wp-content/themes/markomilo/src/scss/base/_base.scss
@@ -71,7 +71,7 @@ blockquote {
 
 hr {
     width: 100%;
-    opacity: 0.2;
+    opacity: 0.5;
     margin-block: 40px;
 
     @include breakpoint(768) {
