--- a/wp-content/themes/markomilo/src/scss/layouts/_page.scss
+++ b/wp-content/themes/markomilo/src/scss/layouts/_page.scss
@@ -3,5 +3,8 @@
         &-content {
             align-items: center;
         }
+        h1 {
+            margin-bottom: 0;
+        }
     }
 }
